yaml/cm_deploy_hotel.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel
  labels:
    app: hotel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotel
  template:
    metadata:
      labels:
        app: hotel
    spec:
      containers:
        - name: hotel
          image: IMAGE_NAME
            valueFrom:
              configMapKeyRef:
                name: hotel-cm
                key: AWS_IMAGE_NAME
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
