yaml/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
          name: order
        spec:
          host: order
          trafficPolicy:
            connectionPool:
            http:
              http1MaxPendingRequests: 1
              maxRequestsPerConnection: 1
